--- a/RealEstate_Dapper_API/appsettings.json
+++ b/RealEstate_Dapper_API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "realEstateCnn": "Server=DEVELOPER71;initial Catalog=DbDapperRealEstate;integrated Security=true;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
