--- a/RealEstate_Dapper_UI/RealEstate_Dapper_UI.csproj
+++ b/RealEstate_Dapper_UI/RealEstate_Dapper_UI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0-preview.6.23360.4" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0-6.23360.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\cityImages\" />
   </ItemGroup>
 
 </Project>
